[gd_scene load_steps=16 format=4 uid="uid://2nhbnve5sdvs"]

[ext_resource type="Script" uid="uid://jahqelh6466l" path="res://Scripts/fairy.gd" id="1_khurk"]
[ext_resource type="Texture2D" uid="uid://d0lqdmon683py" path="res://imgs/tilesets/Gif - Super Retro World tileset/atlas_16x.png" id="1_u4t0g"]
[ext_resource type="PackedScene" uid="uid://isp75s7ewo6p" path="res://scenes/fairy.tscn" id="2_cv1s4"]
[ext_resource type="PackedScene" uid="uid://bmmtms0gb2sd8" path="res://scenes/player.tscn" id="3_qdax3"]
[ext_resource type="PackedScene" uid="uid://bpf4pf2hlwx73" path="res://scenes/skip_to_scene.tscn" id="3_qmp2k"]
[ext_resource type="Texture2D" uid="uid://hjfx7rpleswd" path="res://imgs/buttons/pink long.png" id="4_bexxl"]
[ext_resource type="FontFile" uid="uid://cc2iar17gn74r" path="res://imgs/fonts/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Doublespace/Peaberry-Doublespace.otf" id="5_qmp2k"]
[ext_resource type="Texture2D" uid="uid://bmtkel124exny" path="res://imgs/buttons/pink frame.png" id="6_7ejwh"]
[ext_resource type="Script" uid="uid://bw8exqvab1blm" path="res://Scripts/dialogue_with_fairy.gd" id="6_khurk"]
[ext_resource type="PackedScene" uid="uid://clxnf4487x1nd" path="res://scenes/sound.tscn" id="10_sdrgp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1avxx"]
texture = ExtResource("1_u4t0g")
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:6/0 = 0
1:6/0 = 0
5:9/0 = 0
5:10/0 = 0
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, 0.539577, 5.2159, -0.179858, 5.2159, 4.49647, 0.179859, 5.57562, -5.03605, 4.13675)
5:13/0 = 0
5:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, 0.539577, 5.2159, -0.179858, 5.2159, 4.49647, 0.179859, 5.57562, -5.03605, 4.13675)
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
3:2/size_in_atlas = Vector2i(1, 2)
3:2/0 = 0
24:3/size_in_atlas = Vector2i(3, 2)
24:3/0 = 0
24:0/0 = 0
25:0/size_in_atlas = Vector2i(1, 2)
25:0/0 = 0
26:0/size_in_atlas = Vector2i(6, 3)
26:0/0 = 0
24:6/size_in_atlas = Vector2i(3, 2)
24:6/0 = 0
30:4/0 = 0
30:5/0 = 0
30:6/0 = 0
30:7/0 = 0
30:8/0 = 0
28:10/size_in_atlas = Vector2i(4, 2)
28:10/0 = 0
20:1/size_in_atlas = Vector2i(1, 2)
20:1/0 = 0
20:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.47491, 8, 8, 6.29506, 14.3887, -7.01449, 15.288)
23:2/0 = 0
23:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.539577, 8, 1.97845, 8, 8, -6.1152, 6.29506)
4:4/size_in_atlas = Vector2i(1, 2)
4:4/0 = 0
5:4/size_in_atlas = Vector2i(1, 2)
5:4/0 = 0
6:4/size_in_atlas = Vector2i(1, 2)
6:4/0 = 0
7:4/size_in_atlas = Vector2i(1, 2)
7:4/0 = 0
32:4/0 = 0
1:2/size_in_atlas = Vector2i(1, 2)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.539577, 8, 0.899294, 8, 8, -8, 8)
14:14/size_in_atlas = Vector2i(1, 2)
14:14/0 = 0
14:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.39576, 8, 4.67633, 8, 5.57562, 14.5686, -5.39576, 14.2088)
16:13/size_in_atlas = Vector2i(1, 2)
16:13/0 = 0
16:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.49647, 4.13675, -6.1152, 15.8276, 7.19435, 15.1081, 5.57562, 3.77703)
17:13/size_in_atlas = Vector2i(1, 2)
17:13/0 = 0
17:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.49647, 4.13675, -6.1152, 15.8276, 7.19435, 15.1081, 5.57562, 3.77703)
20:14/size_in_atlas = Vector2i(1, 2)
20:14/0 = 0
22:13/size_in_atlas = Vector2i(2, 2)
22:13/0 = 0
22:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.1297, 2.33816, 13.6693, 2.69788, 14.3887, 15.1081, -12.4103, 14.7484)
19:13/0 = 0
18:12/size_in_atlas = Vector2i(1, 2)
18:12/0 = 0
20:13/size_in_atlas = Vector2i(2, 1)
20:13/0 = 0
19:11/size_in_atlas = Vector2i(2, 2)
19:11/0 = 0
19:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.1297, 2.33816, 13.6693, 2.69788, 14.3887, 15.1081, -12.4103, 14.7484)
21:11/size_in_atlas = Vector2i(2, 2)
21:11/0 = 0
21:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
23:11/size_in_atlas = Vector2i(1, 2)
23:11/0 = 0
23:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
28:13/size_in_atlas = Vector2i(1, 2)
28:13/0 = 0
29:13/size_in_atlas = Vector2i(1, 2)
29:13/0 = 0
29:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -7.73393, 14.3887, 7.01449, 14.7484, 8, -8, 0.899294, -10.2519)
30:13/size_in_atlas = Vector2i(1, 2)
30:13/0 = 0
31:13/size_in_atlas = Vector2i(1, 2)
31:13/0 = 0
23:0/0 = 0
23:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.539577, 8, 1.97845, 8, 8, -6.1152, 6.29506)
21:0/size_in_atlas = Vector2i(2, 2)
21:0/0 = 0
16:0/size_in_atlas = Vector2i(3, 3)
16:0/0 = 0
16:3/size_in_atlas = Vector2i(3, 3)
16:3/0 = 0
14:0/size_in_atlas = Vector2i(2, 2)
14:0/0 = 0
8:0/size_in_atlas = Vector2i(1, 2)
8:0/0 = 0
9:0/size_in_atlas = Vector2i(1, 2)
9:0/0 = 0
10:0/size_in_atlas = Vector2i(1, 2)
10:0/0 = 0
11:0/size_in_atlas = Vector2i(2, 2)
11:0/0 = 0
13:0/size_in_atlas = Vector2i(1, 2)
13:0/0 = 0
4:2/size_in_atlas = Vector2i(2, 1)
4:2/0 = 0
4:3/size_in_atlas = Vector2i(2, 1)
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
6:2/0 = 0
7:2/0 = 0
0:4/size_in_atlas = Vector2i(1, 2)
0:4/0 = 0
3:4/size_in_atlas = Vector2i(1, 2)
3:4/0 = 0
2:4/size_in_atlas = Vector2i(1, 2)
2:4/0 = 0
1:4/size_in_atlas = Vector2i(1, 2)
1:4/0 = 0
21:9/size_in_atlas = Vector2i(2, 2)
21:9/0 = 0
21:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
21:7/size_in_atlas = Vector2i(2, 2)
21:7/0 = 0
21:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
19:4/size_in_atlas = Vector2i(2, 3)
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.4103, 12.2304, -12.2304, -0.719435, 12.0505, -2.51802, 12.4103, 20.8636, -12.0505, 20.8636)
21:4/size_in_atlas = Vector2i(2, 3)
21:4/0 = 0
21:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.4103, 12.2304, -12.2304, -0.719435, 12.0505, -2.51802, 12.4103, 20.8636, -12.0505, 20.8636)
19:7/size_in_atlas = Vector2i(2, 2)
19:7/0 = 0
19:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
16:6/size_in_atlas = Vector2i(3, 3)
16:6/0 = 0
19:9/size_in_atlas = Vector2i(2, 2)
19:9/0 = 0
19:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
24:9/size_in_atlas = Vector2i(2, 2)
24:9/0 = 0
24:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, -1.79859, -12.0505, 5.2159, 12.5901, 5.03605, 13.3095, -1.79859)
26:9/size_in_atlas = Vector2i(2, 2)
26:9/0 = 0
26:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, -1.79859, -12.0505, 5.2159, 12.5901, 5.03605, 13.3095, -1.79859)
26:11/size_in_atlas = Vector2i(2, 2)
26:11/0 = 0
23:7/0 = 0
23:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
23:6/0 = 0
23:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.03604, 1.97845, 5.39576, 2.33816, 5.2159, 8, -4.85618, 5.2159)
23:8/0 = 0
23:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
23:9/0 = 0
23:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
23:10/0 = 0
23:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9498, 0.179859, -13.7011, 13.0639, 12.108, 12.4266, 13.6693, 1.07915)
23:5/0 = 0
23:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, 0.539577, 5.2159, -0.179858, 5.2159, 4.49647, 0.179859, 5.57562, -5.03605, 4.13675)
23:4/0 = 0
20:3/0 = 0
19:3/0 = 0
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.47491, 8, 8, 6.29506, 14.3887, -7.01449, 15.288)
20:0/0 = 0
20:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.47491, 8, 8, 6.29506, 14.3887, -7.01449, 15.288)
15:6/0 = 0
15:7/0 = 0
15:8/0 = 0
15:9/0 = 0
12:7/size_in_atlas = Vector2i(3, 3)
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20.711, -13.7011, -19.7551, 15.6129, 19.4365, 13.0639, 19.7551, -12.7452)
13:10/0 = 0
14:10/0 = 0
14:11/0 = 0
15:10/0 = 0
12:10/0 = 0
10:10/size_in_atlas = Vector2i(2, 2)
10:10/0 = 0
8:10/size_in_atlas = Vector2i(2, 2)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.1297, 2.33816, 13.6693, 2.69788, 14.3887, 15.1081, -12.4103, 14.7484)
8:8/size_in_atlas = Vector2i(2, 2)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.1297, 2.33816, 13.6693, 2.69788, 14.3887, 15.1081, -12.4103, 14.7484)
10:8/size_in_atlas = Vector2i(2, 2)
10:8/0 = 0
16:9/size_in_atlas = Vector2i(1, 2)
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.49647, 4.13675, -6.1152, 15.8276, 7.19435, 15.1081, 5.57562, 3.77703)
17:9/size_in_atlas = Vector2i(1, 2)
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.49647, 4.13675, -6.1152, 15.8276, 7.19435, 15.1081, 5.57562, 3.77703)
18:9/0 = 0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.25901, 8, 1.07915, 8, 2.69788, 5.2159, 3.41732, 2.51802, 0.719435, 4.31661, -1.61873, 3.41732, -3.41732, 2.15831)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.25901, 8, 1.07915, 8, 2.69788, 5.2159, 3.41732, 2.51802, 0.719435, 4.31661, -1.61873, 3.41732, -3.41732, 2.15831)
18:11/0 = 0
18:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.25901, 8, 1.07915, 8, 2.69788, 5.2159, 3.41732, 2.51802, 0.719435, 4.31661, -1.61873, 3.41732, -3.41732, 2.15831)
16:11/size_in_atlas = Vector2i(1, 2)
16:11/0 = 0
16:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.49647, 4.13675, -6.1152, 15.8276, 7.19435, 15.1081, 5.57562, 3.77703)
17:11/size_in_atlas = Vector2i(1, 2)
17:11/0 = 0
17:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.49647, 4.13675, -6.1152, 15.8276, 7.19435, 15.1081, 5.57562, 3.77703)
14:12/size_in_atlas = Vector2i(2, 1)
14:12/0 = 0
14:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.6908, 5.03604, 10.6117, 4.85618, 12.5901, 0.539577, -14.029, -1.61873)
14:13/size_in_atlas = Vector2i(2, 1)
14:13/0 = 0
14:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.6908, 5.03604, 10.6117, 4.85618, 12.5901, 0.539577, -14.029, -1.61873)
12:12/size_in_atlas = Vector2i(1, 2)
12:12/0 = 0
13:12/size_in_atlas = Vector2i(1, 2)
13:12/0 = 0
13:15/0 = 0
13:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.03604, 1.97845, 5.39576, 2.33816, 5.2159, 8, -4.85618, 5.2159)
16:15/0 = 0
17:15/0 = 0
21:14/size_in_atlas = Vector2i(1, 2)
21:14/0 = 0
21:2/size_in_atlas = Vector2i(1, 2)
21:2/0 = 0
22:2/size_in_atlas = Vector2i(1, 2)
22:2/0 = 0
8:2/size_in_atlas = Vector2i(2, 2)
8:2/0 = 0
10:2/size_in_atlas = Vector2i(2, 2)
10:2/0 = 0
24:14/0 = 0
24:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -6.1152, -3.0576, -6.29506, 1.79859, -6.47491, 5.2159, -6.29506, 8, 4.85619, 8, 5.75548, -1.07915, 5.39576, -8)
24:15/0 = 0
24:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -6.1152, -3.0576, -6.29506, 1.79859, -6.47491, 5.2159, -6.29506, 8, 4.85619, 8, 5.75548, -1.07915, 5.39576, -8)
25:15/0 = 0
25:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -6.1152, -3.0576, -6.29506, 1.79859, -6.47491, 5.2159, -6.29506, 8, 4.85619, 8, 5.75548, -1.07915, 5.39576, -8)
26:14/0 = 0
26:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -6.1152, -3.0576, -6.29506, 1.79859, -6.47491, 5.2159, -6.29506, 8, 4.85619, 8, 5.75548, -1.07915, 5.39576, -8)
25:14/0 = 0
25:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -6.1152, -3.0576, -6.29506, 1.79859, -6.47491, 5.2159, -6.29506, 8, 4.85619, 8, 5.75548, -1.07915, 5.39576, -8)
27:15/0 = 0
27:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -6.1152, -3.0576, -6.29506, 1.79859, -6.47491, 5.2159, -6.29506, 8, 4.85619, 8, 5.75548, -1.07915, 5.39576, -8)
26:15/0 = 0
26:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ht13q"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_1avxx")

[sub_resource type="LabelSettings" id="LabelSettings_sdrgp"]
font = ExtResource("5_qmp2k")
font_size = 30
font_color = Color(0.956863, 0.670588, 0.670588, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_sdrgp"]
radius = 547.048

[sub_resource type="CircleShape2D" id="CircleShape2D_khurk"]
radius = 36.7967

[node name="fairy shop" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_khurk")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_ht13q")
format = 2

[node name="floor" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAcAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAcAAAAAAAMAAAAAAAcAAAAAAAQAAAAAAAcAAAAAAAUAAAAAAAcAAAAAAAYAAAAAAAcAAAAAAAcAAAAAAAcAAAAAAAgAAAAAAAcAAAAAAAkAAAAAAAcAAAAAAAoAAAAAAAcAAAAAAAsAAAAAAAcAAAAAAAwAAAAAAAcAAAABAAAAAAAAAAcAAAACAAAAAAAAAAcAAAADAAAAAAAAAAcAAAAEAAAAAAAAAAcAAAAFAAAAAAAAAAcAAAAGAAAAAAAAAAcAAAAHAAAAAAAAAAcAAAAIAAAAAAAAAAcAAAAJAAAAAAAAAAcAAAAKAAAAAAAAAAcAAAALAAAAAAAAAAcAAAAMAAAAAAAAAAcAAAANAAAAAAAAAAcAAAAOAAAAAAAAAAcAAAAPAAAAAAAAAAcAAAAQAAAAAAAAAAcAAAARAAAAAAAAAAcAAAASAAAAAAAAAAcAAAATAAAAAAAAAAcAAAAUAAAAAAAAAAcAAAAVAAAAAAAAAAcAAAAWAAAAAAAAAAcAAAAXAAAAAAAAAAcAAAAYAAAAAAAAAAcAAAABAAEAAAAAAAcAAAACAAEAAAAAAAcAAAADAAEAAAAAAAcAAAAEAAEAAAAAAAcAAAAFAAEAAAAAAAcAAAAGAAEAAAAAAAcAAAAHAAEAAAAAAAcAAAAIAAEAAAAAAAcAAAAJAAEAAAAAAAcAAAAKAAEAAAAAAAcAAAALAAEAAAAAAAcAAAAMAAEAAAAAAAcAAAANAAEAAAAAAAcAAAAOAAEAAAAAAAcAAAAPAAEAAAAAAAcAAAAQAAEAAAAAAAcAAAARAAEAAAAAAAcAAAASAAEAAAAAAAcAAAATAAEAAAAAAAcAAAAUAAEAAAAAAAcAAAAVAAEAAAAAAAcAAAAWAAEAAAAAAAcAAAAXAAEAAAAAAAcAAAAYAAEAAAAAAAcAAAAWAAIAAAAAAAcAAAAVAAIAAAAAAAcAAAAUAAIAAAAAAAcAAAATAAIAAAAAAAcAAAASAAIAAAAAAAcAAAARAAIAAAAAAAcAAAAQAAIAAAAAAAcAAAAPAAIAAAAAAAcAAAAOAAIAAAAAAAcAAAANAAIAAAAAAAcAAAAMAAIAAAAAAAcAAAALAAIAAAAAAAcAAAAKAAIAAAAAAAcAAAAJAAIAAAAAAAcAAAAIAAIAAAAAAAcAAAAHAAIAAAAAAAcAAAAGAAIAAAAAAAcAAAAFAAIAAAAAAAcAAAAEAAIAAAAAAAcAAAADAAIAAAAAAAcAAAACAAIAAAAAAAcAAAABAAIAAAAAAAcAAAAJAAMAAAAAAAcAAAAKAAMAAAAAAAcAAAALAAMAAAAAAAcAAAAMAAMAAAAAAAcAAAANAAMAAAAAAAcAAAAOAAMAAAAAAAcAAAAPAAMAAAAAAAcAAAAQAAMAAAAAAAcAAAARAAMAAAAAAAcAAAASAAMAAAAAAAcAAAATAAMAAAAAAAcAAAAUAAMAAAAAAAcAAAAVAAMAAAAAAAcAAAAWAAMAAAAAAAcAAAAXAAMAAAAAAAcAAAAXAAIAAAAAAAcAAAAYAAIAAAAAAAcAAAAYAAMAAAAAAAcAAAAIAAMAAAAAAAcAAAAHAAMAAAAAAAcAAAAGAAMAAAAAAAcAAAAFAAMAAAAAAAcAAAAEAAMAAAAAAAcAAAADAAMAAAAAAAcAAAACAAMAAAAAAAcAAAABAAMAAAAAAAcAAAABAAQAAAAAAAcAAAACAAQAAAAAAAcAAAAEAAQAAAAAAAcAAAAFAAQAAAAAAAcAAAAGAAQAAAAAAAcAAAAHAAQAAAAAAAcAAAAIAAQAAAAAAAcAAAAJAAQAAAAAAAcAAAAKAAQAAAAAAAcAAAALAAQAAAAAAAcAAAAMAAQAAAAAAAcAAAANAAQAAAAAAAcAAAAOAAQAAAAAAAcAAAAPAAQAAAAAAAcAAAAQAAQAAAAAAAcAAAARAAQAAAAAAAcAAAASAAQAAAAAAAcAAAATAAQAAAAAAAcAAAAUAAQAAAAAAAcAAAAVAAQAAAAAAAcAAAAWAAQAAAAAAAcAAAAXAAUAAAAAAAcAAAAYAAUAAAAAAAcAAAAYAAQAAAAAAAcAAAAXAAQAAAAAAAcAAAALAAUAAAAAAAcAAAAKAAUAAAAAAAcAAAAJAAUAAAAAAAcAAAAIAAUAAAAAAAcAAAAHAAUAAAAAAAcAAAAGAAUAAAAAAAcAAAADAAQAAAAAAAcAAAABAAUAAAAAAAcAAAACAAUAAAAAAAcAAAADAAUAAAAAAAcAAAAEAAUAAAAAAAcAAAAFAAUAAAAAAAcAAAAMAAUAAAAAAAcAAAANAAUAAAAAAAcAAAAOAAUAAAAAAAcAAAAPAAUAAAAAAAcAAAAQAAUAAAAAAAcAAAARAAUAAAAAAAcAAAASAAUAAAAAAAcAAAATAAUAAAAAAAcAAAAUAAUAAAAAAAcAAAAVAAUAAAAAAAcAAAAWAAUAAAAAAAcAAAAXAAYAAAAAAAcAAAAYAAYAAAAAAAcAAAAWAAYAAAAAAAcAAAAVAAYAAAAAAAcAAAAUAAYAAAAAAAcAAAATAAYAAAAAAAcAAAASAAYAAAAAAAcAAAARAAYAAAAAAAcAAAAQAAYAAAAAAAcAAAAPAAYAAAAAAAcAAAAOAAYAAAAAAAcAAAANAAYAAAAAAAcAAAAMAAYAAAAAAAcAAAALAAYAAAAAAAcAAAAKAAYAAAAAAAcAAAAJAAYAAAAAAAcAAAAIAAYAAAAAAAcAAAAHAAYAAAAAAAcAAAAGAAYAAAAAAAcAAAAFAAYAAAAAAAcAAAAEAAYAAAAAAAcAAAADAAYAAAAAAAcAAAACAAYAAAAAAAcAAAABAAYAAAAAAAcAAAABAAcAAAAAAAcAAAADAAcAAAAAAAcAAAAEAAcAAAAAAAcAAAAFAAcAAAAAAAcAAAAGAAcAAAAAAAcAAAAHAAcAAAAAAAcAAAAIAAcAAAAAAAcAAAAJAAcAAAAAAAcAAAAKAAcAAAAAAAcAAAALAAcAAAAAAAcAAAAMAAcAAAAAAAcAAAANAAcAAAAAAAcAAAAOAAcAAAAAAAcAAAAPAAcAAAAAAAcAAAAQAAcAAAAAAAcAAAARAAcAAAAAAAcAAAASAAcAAAAAAAcAAAATAAcAAAAAAAcAAAAUAAcAAAAAAAcAAAAVAAcAAAAAAAcAAAAYAAcAAAAAAAcAAAAXAAcAAAAAAAcAAAAWAAcAAAAAAAcAAAADAAgAAAAAAAcAAAACAAgAAAAAAAcAAAACAAcAAAAAAAcAAAABAAgAAAAAAAcAAAAEAAgAAAAAAAcAAAAFAAgAAAAAAAcAAAAGAAgAAAAAAAcAAAAHAAgAAAAAAAcAAAAIAAgAAAAAAAcAAAAJAAgAAAAAAAcAAAAKAAgAAAAAAAcAAAALAAgAAAAAAAcAAAAMAAgAAAAAAAcAAAANAAgAAAAAAAcAAAAOAAgAAAAAAAcAAAAPAAgAAAAAAAcAAAAQAAgAAAAAAAcAAAARAAgAAAAAAAcAAAASAAgAAAAAAAcAAAATAAgAAAAAAAcAAAAUAAgAAAAAAAcAAAAVAAgAAAAAAAcAAAAWAAgAAAAAAAcAAAAXAAgAAAAAAAcAAAAYAAgAAAAAAAcAAAAYAAkAAAAAAAcAAAAXAAkAAAAAAAcAAAAWAAkAAAAAAAcAAAAVAAkAAAAAAAcAAAAUAAkAAAAAAAcAAAATAAkAAAAAAAcAAAASAAkAAAAAAAcAAAARAAkAAAAAAAcAAAAQAAkAAAAAAAcAAAAPAAkAAAAAAAcAAAAOAAkAAAAAAAcAAAANAAkAAAAAAAcAAAAMAAkAAAAAAAcAAAALAAkAAAAAAAcAAAAKAAkAAAAAAAcAAAAJAAkAAAAAAAcAAAAIAAkAAAAAAAcAAAAHAAkAAAAAAAcAAAAGAAkAAAAAAAcAAAAFAAkAAAAAAAcAAAAEAAkAAAAAAAcAAAADAAkAAAAAAAcAAAACAAkAAAAAAAcAAAABAAkAAAAAAAcAAAABAAoAAAAAAAcAAAACAAoAAAAAAAcAAAAGAAoAAAAAAAcAAAAHAAoAAAAAAAcAAAAIAAoAAAAAAAcAAAAJAAoAAAAAAAcAAAAKAAoAAAAAAAcAAAALAAoAAAAAAAcAAAAMAAoAAAAAAAcAAAANAAoAAAAAAAcAAAAOAAoAAAAAAAcAAAAPAAoAAAAAAAcAAAAQAAoAAAAAAAcAAAARAAoAAAAAAAcAAAASAAoAAAAAAAcAAAATAAoAAAAAAAcAAAAUAAoAAAAAAAcAAAAVAAoAAAAAAAcAAAAWAAoAAAAAAAcAAAAXAAoAAAAAAAcAAAAYAAoAAAAAAAcAAAAJAAsAAAAAAAcAAAAIAAsAAAAAAAcAAAAHAAsAAAAAAAcAAAAGAAsAAAAAAAcAAAAFAAsAAAAAAAcAAAAEAAsAAAAAAAcAAAAEAAoAAAAAAAcAAAADAAoAAAAAAAcAAAADAAsAAAAAAAcAAAACAAsAAAAAAAcAAAABAAsAAAAAAAcAAAAFAAoAAAAAAAcAAAAKAAsAAAAAAAcAAAALAAsAAAAAAAcAAAAMAAsAAAAAAAcAAAANAAsAAAAAAAcAAAAOAAsAAAAAAAcAAAAPAAsAAAAAAAcAAAAQAAsAAAAAAAcAAAARAAsAAAAAAAcAAAASAAsAAAAAAAcAAAATAAsAAAAAAAcAAAAUAAsAAAAAAAcAAAAVAAsAAAAAAAcAAAAWAAwAAAAAAAcAAAAXAAwAAAAAAAcAAAAYAAwAAAAAAAcAAAAYAAsAAAAAAAcAAAAWAAsAAAAAAAcAAAAQAAwAAAAAAAcAAAAPAAwAAAAAAAcAAAAOAAwAAAAAAAcAAAANAAwAAAAAAAcAAAAXAAsAAAAAAAcAAAARAAwAAAAAAAcAAAAMAAwAAAAAAAcAAAALAAwAAAAAAAcAAAABAAwAAAAAAAcAAAACAAwAAAAAAAcAAAADAAwAAAAAAAcAAAAEAAwAAAAAAAcAAAAFAAwAAAAAAAcAAAAGAAwAAAAAAAcAAAASAAwAAAAAAAcAAAATAAwAAAAAAAcAAAAUAAwAAAAAAAcAAAAVAAwAAAAAAAcAAAAKAAwAAAAAAAcAAAAJAAwAAAAAAAcAAAAIAAwAAAAAAAcAAAAHAAwAAAAAAAcAAAA=")
tile_set = SubResource("TileSet_ht13q")

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAABAAIAAAACAAAAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAAABAAIAAAAMAAAAAAABAAIAAAANAAAAAAABAAIAAAAOAAAAAAABAAIAAAAPAAAAAAABAAIAAAAQAAAAAAABAAIAAAARAAAAAAABAAIAAAASAAAAAAABAAIAAAATAAAAAAABAAIAAAAUAAAAAAABAAIAAAAVAAAAAAABAAIAAAAWAAAAAAABAAIAAAAXAAAAAAABAAIAAAAYAAAAAAABAAIAAAABAAAAAAABAAIAAAABAAYAAAAVAAkAAAABAAsAAAAVAAkAAAADAAsAAAAIAAoAAAAFAAsAAAAVAAcAAAAWAAsAAAAVAAAAAAAXAAoAAAAXAAIAAAAWAAoAAAAXAAAAAAAVAAsAAAAUAAEAAAAYAAkAAAAUAAEAAAAYAAsAAAAUAAEAAAAXAAcAAAAQAAYAAAAXAAUAAAAQAAMAAAAXAAMAAAAQAAAAAAAUAAgAAAAMAAcAAAAPAAIAAAAYAA4AAAAPAAMAAAAaAA4AAAAPAAQAAAAYAA8AAAAQAAQAAAAZAA4AAAARAAQAAAAZAA4AAAASAAQAAAAZAA4AAAATAAQAAAAZAA4AAAAUAAQAAAAZAA4AAAAVAAQAAAAbAA8AAAAVAAMAAAAaAA4AAAAVAAIAAAAYAA4AAAAQAAIAAAARAA0AAAABAAkAAAARAAsAAAABAAgAAAASAAoAAAACAAkAAAASAAsAAAACAAgAAAASAAkAAAAXAAkAAAATAAMAAAAHAAsAAAAVAAQAAAAJAAsAAAAVAAQAAAALAAsAAAAVAAQAAAADAAkAAAARAAkAAAAFAAkAAAARAAkAAAAGAAkAAAARAAkAAAAHAAkAAAARAAkAAAAEAAkAAAARAAkAAAADAAcAAAAVAA4AAAAEAAcAAAARAA0AAAAFAAcAAAARAA0AAAAGAAcAAAARAA0AAAAEAAYAAAAQAA0AAAAFAAYAAAAQAA0AAAAGAAYAAAAQAA0AAAAUAAsAAAAOAA4AAAAOAAEAAAAdAA0AAAAUAAkAAAAPAAkAAAAUAAcAAAAPAAcAAAASAAgAAAAPAAYAAAANAAsAAAAIAAgAAAAJAAkAAAAIAAgAAAALAAkAAAAIAAgAAAAIAAcAAAAIAAgAAAAKAAcAAAAIAAgAAAABAAQAAAAIAAgAAAADAAQAAAAIAAoAAAAFAAQAAAAIAAoAAAAHAAQAAAAIAAoAAAAMAAcAAAASAAoAAAANAAoAAAASAAoAAAAPAAsAAAASAAoAAAAVAAoAAAASAAkAAAADAAYAAAASAAkAAAA=")
tile_set = SubResource("TileSet_ht13q")

[node name="Layer2" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAVAAgAAAAXAAoAAAAUAAgAAAAXAAgAAAATAAcAAAAXAAcAAAAVAAQAAAAOAA4AAAALAAAAAAAcAA0AAAABAAAAAAAYAAMAAAAUAAAAAAAOAAAAAAADAAAAAAAOAAAAAAAIAAYAAAASAAoAAAALAAoAAAASAAoAAAADAAoAAAASAAoAAAABAAMAAAASAAoAAAAKAAYAAAASAAsAAAAFAAMAAAASAAsAAAABAAUAAAASAAsAAAAJAAgAAAASAAsAAAAJAAoAAAASAAkAAAADAAMAAAASAAkAAAAHAAAAAAANAAoAAAAJAAAAAAAPAAoAAAARAAAAAAAOAAoAAAARAAEAAAAOAAsAAAAWAAAAAAANAAoAAAAFAAEAAAAYAAkAAAASAAsAAAATAAsAAAATAAoAAAAXAAQAAAAWAAgAAAAPAAgAAAALAAkAAAAKAAgAAAA=")
tile_set = SubResource("TileSet_ht13q")

[node name="player" parent="." instance=ExtResource("3_qdax3")]
position = Vector2(155, 51)

[node name="fairy shop camera2" type="Camera2D" parent="player"]
enabled = false
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 245
limit_bottom = 157
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="skip to scene" parent="player/fairy shop camera2" instance=ExtResource("3_qmp2k")]

[node name="dialogue box" type="CanvasLayer" parent="player/fairy shop camera2"]

[node name="TextureRect2" type="TextureRect" parent="player/fairy shop camera2/dialogue box"]
offset_left = 66.0
offset_top = 379.0
offset_right = 1080.0
offset_bottom = 602.0
texture = ExtResource("4_bexxl")

[node name="Dialogue" type="Label" parent="player/fairy shop camera2/dialogue box"]
offset_left = 118.0
offset_top = 444.0
offset_right = 1021.0
offset_bottom = 550.0
text = "I am Princess of Selene and I have heard your name all the way from the village of Blue Moon.
"
label_settings = SubResource("LabelSettings_sdrgp")
autowrap_mode = 2
text_overrun_behavior = 4
script = ExtResource("6_khurk")

[node name="Next Button" type="TextureButton" parent="player/fairy shop camera2/dialogue box"]
offset_left = 963.0
offset_top = 478.0
offset_right = 1140.0
offset_bottom = 647.0
texture_normal = ExtResource("6_7ejwh")
stretch_mode = 4

[node name="Label" type="Label" parent="player/fairy shop camera2/dialogue box/Next Button"]
layout_mode = 0
offset_left = 38.0
offset_top = 81.0
offset_right = 135.0
offset_bottom = 118.0
text = "Next"
label_settings = SubResource("LabelSettings_sdrgp")

[node name="Prev Button" type="TextureButton" parent="player/fairy shop camera2/dialogue box"]
offset_left = 16.0
offset_top = 480.0
offset_right = 203.0
offset_bottom = 645.0
texture_normal = ExtResource("6_7ejwh")
stretch_mode = 4

[node name="Label" type="Label" parent="player/fairy shop camera2/dialogue box/Prev Button"]
layout_mode = 0
offset_left = 38.0
offset_top = 81.0
offset_right = 135.0
offset_bottom = 118.0
text = "Prev"
label_settings = SubResource("LabelSettings_sdrgp")

[node name="fairy" parent="." instance=ExtResource("2_cv1s4")]
y_sort_enabled = true
position = Vector2(295, 42)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(15, 5, 5, 5, 0, 5, 0, 208, 400, 208, 400, -8, 16, -8, 16, 1, -6, -1, -6, -30, 432, -40, 432, 250, -30, 241, -35, 6, 2, 2)

[node name="fairy detect" type="Area2D" parent="."]
position = Vector2(295, 42)
scale = Vector2(0.1, 0.1)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="fairy detect"]
position = Vector2(9.99986, 230)
shape = SubResource("CircleShape2D_sdrgp")

[node name="fairy shop exit" type="Area2D" parent="."]
position = Vector2(24, 25)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="fairy shop exit"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_khurk")

[node name="ambient music" parent="." instance=ExtResource("10_sdrgp")]

[connection signal="pressed" from="player/fairy shop camera2/dialogue box/Next Button" to="player/fairy shop camera2/dialogue box/Dialogue" method="_on_next_button_pressed"]
[connection signal="pressed" from="player/fairy shop camera2/dialogue box/Prev Button" to="player/fairy shop camera2/dialogue box/Dialogue" method="_on_prev_button_pressed"]
[connection signal="body_entered" from="fairy detect" to="." method="_on_fairy_detect_body_entered"]
[connection signal="body_entered" from="fairy shop exit" to="." method="_on_fairy_shop_exit_body_entered"]
[connection signal="body_exited" from="fairy shop exit" to="." method="_on_fairy_shop_exit_body_exited"]
